$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-27 (opened September 1, 2009)

	* plot.cca: works with na.action = na.exclude.
	
Version 1.16-26 (closed September 1, 2009)

	* cca and rda: can now handle missing values in constraints or
	conditions. With 'na.action = na.omit', the rows with missing
	values are removed, and with 'na.action = na.exclude' all rows are
	retained but results that cannot be computed are NA. The LC scores
	cannot be computed with missing values, but WA scores (usually)
	can be computed. The results with 'na.exclude' probably fail with
	most support functions because these do not expect missing values
	in the results. These functions are fixed with time. capscale does
	not (yet) handle missing data.

	* oecosimu: does not depend on permatfull/permatswap, but method
	can be a function. The r2dtable method implemented also
	to be used with adipart and related functions.

	* bioenv: uses standard R function combn() and removes
	ripley.subs() and ripley.subsets() from vegan. The result should
	be unchanged.

	* ordiNAexclude: internal infrastructure to implement na.action =
	na.exclude for cca and rda (and capscale?). The option returns
	scores where the excluded sites get NA results and are not
	omitted. In constrained ordination, LC scores will NA, but WA
	scores are found from the community data, and the current function
	uses predict.cca/predict.rda with 'newdata' of removed
	observations to estimate WA scores of excluded observation.
	
	* ordiParseFormula: handles missing values with na.action. 

Version 1.16-25 (closed August 31, 2009)

	* mantel.correlog: updated to the version 1.4 of Pierre Legendre's
	package. 

	*  RsquareAdj: documented.

	* ordiellipse & ordihull: argument 'draw' got a new alternative
	"none". With this, nothing is drawn but the invisible plotting
	structure is returned. This was added so that it is easier to
	develop permutation tests for hulls and ellipses.
